style(code blocks): prevent overflow (#152)

--- a/src/content/Notifier.module.scss
+++ b/src/content/Notifier.module.scss
@@ -6,6 +6,9 @@
   bottom: 0;
   right: 0;
 
+  button {
+    border: none;
+  }
   div {
     opacity: 1;
   }
